--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: metrics.in.r
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Do Your Econometrics Homework in R
+Version: 0.1.0
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Nathan", "Gardner Hattersley", , "nhattersley@utexas.edu", role = c("aut", "cre"))
+Description: This is a metapackage and set of vignettes for helping econometrics students do their homework in R. It contains information about how to do basic econometrics in R, as well as information on how to create reproducible research.
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
+URL: https://github.com/nateybear/metrics-in-r
+BugReports: https://github.com/nateybear/metrics-in-r/issues
