--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,26 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
 URL: https://github.com/nateybear/metrics-in-r
 BugReports: https://github.com/nateybear/metrics-in-r/issues
+Depends: 
+    aod,
+    boot,
+    broom,
+    fixest,
+    ggthemes,
+    ivreg,
+    janitor,
+    kableExtra,
+    lmtest,
+    lubridate,
+    skimr,
+    snakecase,
+    tidyverse
+Imports: 
+    glue,
+    haven,
+    here,
+    magrittr,
+    quantreg,
+    rlang,
+    sandwich,
+    stats
