--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,5 @@
-url: https://nateybear.github.io/metrics-in-r
+url: https://nateybear.github.io/metrics-in-r/
 template:
   bootstrap: 5
   bootswatch: journal
+
