--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
-URL: https://github.com/nateybear/metrics-in-r
+URL: https://github.com/nateybear/metrics-in-r,
+    https://nateybear.github.io/metrics-in-r/
 BugReports: https://github.com/nateybear/metrics-in-r/issues
 Depends: 
     aod,
