--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,4 +2,15 @@ url: https://nateybear.github.io/metrics-in-r/
 template:
   bootstrap: 5
   bootswatch: journal
-
+articles:
+- title: Introduction
+  contents:
+  - metrics-in-r
+- title: The Art of Metrics
+  desc: Learn how we use numerical programming skills to translate greek letters into R code and estimate all kinds of econometric models.
+  contents:
+  - intro-lm
+- title: The Zen of Programming
+  desc: Learn how to enjoy programming by following best practices accumulated over generations of Zen masters.
+  contents:
+  - intro-zen
