--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -8,6 +8,7 @@ articles:
   contents:
   - art/intro-lm
   - art/robust-ses
+  - art/rmarkdown-intro
 - title: The Zen of Programming
   desc: Learn how to enjoy programming by following best practices accumulated over generations of Zen masters.
   contents:
