--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,13 @@
 S3method(df.residual,fixest)
 S3method(df.residual,rqs)
 S3method(print,postEstimation)
+S3method(vcov,rqs)
 S3method(vcovBS,rqs)
 export("%>%")
 export(lincom)
 export(nlcom)
 export(test)
 export(testnl)
-export(vcov.rqs)
 importFrom(magrittr,"%>%")
 importFrom(sandwich,vcovBS)
 importFrom(stats,df.residual)
