--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(vcovBS,rqs)
 export("%>%")
 export(lincom)
 export(nlcom)
+export(normalized_coef)
 export(test)
 export(testnl)
 importFrom(magrittr,"%>%")
