trying to fix error

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ export(normalized_coef)
 export(test)
 export(testnl)
 importFrom(magrittr,"%>%")
+importFrom(mosaic,do)
+importFrom(mosaic,resample)
 importFrom(sandwich,vcovBS)
 importFrom(stats,df.residual)
 importFrom(stats,vcov)
