--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -10,6 +10,7 @@ articles:
   - art/robust-ses
   - art/rmarkdown-intro
   - art/post-estimation
+  - art/bootstrap
 - title: The Zen of Programming
   desc: Learn how to enjoy programming by following best practices accumulated over generations of Zen masters.
   contents:
