panel data done

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -11,6 +11,7 @@ articles:
   - art/rmarkdown-intro
   - art/post-estimation
   - art/bootstrap
+  - art/panel
 - title: The Zen of Programming
   desc: Learn how to enjoy programming by following best practices accumulated over generations of Zen masters.
   contents:
